# un_sdgs

./: pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
data/: un_sdgs_list.xlsx
src/: get_un_sdgs_list_with_api.py
