[tool.poetry]
name = "un_sdgs"
version = "0.1.0"
description = ""
authors = ["ktman-ktman <ktym.disk.mobile.note@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
pandas = "^1.3.5"
types-requests = "^2.27.7"
openpyxl = "^3.0.9"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^21.12b0"
isort = "^5.10.1"
mypy = "^0.931"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
